// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGIcon should correctly apply style since it is cached 1`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="background:red"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-img"
  />
</svg>
`;

exports[`SVGIcon should correctly apply style since it is cached 2`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="background:orange"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-img"
  />
</svg>
`;

exports[`SVGIcon should correctly apply style since it is cached 3`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="height:32px;width:32px;background:orange"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-img"
  />
</svg>
`;

exports[`SVGIcon should correctly apply style since it is cached 4`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="height:32px;width:20px;background:red"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-img"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 1`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`SVGIcon should render correctly based on props 2`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 3`] = `
<svg
  class="md-icon md-text--disabled"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 4`] = `
<svg
  class="md-icon md-text--disabled"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 5`] = `
<svg
  class="md-icon md-text--theme-primary"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 6`] = `
<svg
  class="md-icon md-text--theme-secondary"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 7`] = `
<svg
  class="md-icon md-text--inherit"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 8`] = `
<svg
  class="md-icon md-text--error"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="9fdsf jjjfasodjfads"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 9`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-hash-tag"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 10`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="height:100px;width:100px"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-hash-tag"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 11`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="height:100px;width:30px;background:red"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-hash-tag"
  />
</svg>
`;

exports[`SVGIcon should render correctly based on props 12`] = `
<svg
  class="md-icon"
  focusable="false"
  role="img"
  style="height:100px;width:100px;background:red"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    href="#some-hash-tag"
  />
</svg>
`;
